# CosmicRES

./: .gitignore  Cargo.toml  README.md  git_agent.py  justfile
generate/: template-README.md
i18n/en/: cosmic_resource_monitor.ftl
resources/: app.desktop
src/: app.rs  config.rs  main.rs
